# imu-rs

./: Cargo.toml  README.rst  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: bmi160.rs  lsm6ds3.rs  main.rs  qmc5883l.rs  types.rs
test/: .enter.sh  test.py
