[package]
authors = ["Franck Barbenoire <franck.barbenoire@boble.tech>"]
edition = "2021"
readme = "README.md"
name = "imu-rs"
version = "0.1.0"

[dependencies]
byte = "0.2.7"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
nb = "1.1.0"
# panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
shared-bus = "0.2.4"
crc = "3.0.1"
libm = "0.2.8"

bmi160 = "0.1.2"
eeprom24x = "=0.6.1"
lsm6ds33 = "=0.5.0"
qmc5883l = "0.0.1"

[dependencies.stm32f4xx-hal]
version = "0.19.0"
features = ["stm32f411"]

[dependencies.num-traits]
version = "0.2.18"
default-features = false
features = ["libm"]

[features]
default = ["lsm6ds3", "qmc5883l"]
bmi160 = []
lsm6ds3 = []
qmc5883l = []

# this lets you use `cargo fix`!
[[bin]]
name = "imu-rs"
test = false
bench = false
